<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_light_grey">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            style="@style/square_card_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/transaction_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center">
            </TextView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/blue"
            style="@style/square_card_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_transaction_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center">
            </TextView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="390dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/transaction_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/amount_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_amount_transaction_text"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:backgroundTint="@color/blue"
                    android:textCursorDrawable="@null"
                    android:inputType="numberDecimal"
                    android:hint="@string/amount_hint" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="390dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/transaction_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_text"
                    android:textSize="18sp"
                    android:layout_gravity="center" />

                <Spinner
                    android:id="@+id/edit_account_transaction"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:spinnerMode="dropdown"
                    android:contentDescription="@string/account_hint"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="390dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/transaction_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/type_text"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radio_buttons_group"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="60dp"
                    android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/expense_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="30dp"
                            android:buttonTint="@color/blue"
                            android:text="@string/type_expense_text"
                            tools:ignore="RtlSymmetry">
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/income_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/blue"
                            android:text="@string/type_income_text">
                        </RadioButton>

                </RadioGroup>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="390dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/transaction_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_text"
                    android:textSize="18sp"
                    android:layout_gravity="center" />

                <Spinner
                    android:id="@+id/edit_category_transaction"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:spinnerMode="dropdown"
                    android:contentDescription="@string/category_hint"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="390dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/transaction_note_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_text"
                    android:textSize="18sp"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/transaction_note_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:backgroundTint="@color/blue"
                    android:inputType="textMultiLine"
                    android:textCursorDrawable="@null"
                    android:hint="@string/note_hint">
                </EditText>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/add_transaction_button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/add_transaction_text"
            android:textAllCaps="false">
        </Button>

    </LinearLayout>

</layout>