<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/light_light_grey">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                style="@style/square_card_view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/home_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center">
                </TextView>

            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/blue"
                    style="@style/square_card_view">

                    <TextView
                        android:id="@+id/account_name_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/edit_transaction_text"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAlignment="center">
                    </TextView>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/back_to_home_fab"
                    style="@style/Widget.Design.FloatingActionButton"
                    app:shapeAppearanceOverlay="@style/fab_square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@color/white"
                    android:tint="@color/white"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/white"
                    app:backgroundTint="@android:color/transparent"
                    android:outlineProvider="none"
                    app:borderWidth="0dp"
                    app:fabSize="mini"
                    android:elevation="1dp"
                    app:elevation="1dp"
                    android:contentDescription="@string/go_back_to_settings_description" />

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="390dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/transaction_amount_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/amount_text"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/edit_amount_transaction_text"
                        android:layout_width="225dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="30dp"
                        android:backgroundTint="@color/blue"
                        android:textCursorDrawable="@null"
                        android:inputType="numberDecimal"
                        android:hint="@string/amount_hint" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="390dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:id="@+id/transaction_account_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_text"
                        android:textSize="18sp"
                        android:layout_gravity="center" />

                    <Spinner
                        android:id="@+id/edit_account_transaction"
                        android:layout_width="225dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="30dp"
                        android:spinnerMode="dropdown"
                        android:contentDescription="@string/account_hint"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="390dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/transaction_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/type_text"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/radio_buttons_group"
                        android:layout_width="225dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="60dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/expense_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="30dp"
                            android:buttonTint="@color/blue"
                            android:text="@string/type_expense_text"
                            tools:ignore="RtlSymmetry">
                        </RadioButton>

                        <RadioButton
                            android:id="@+id/income_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/blue"
                            android:text="@string/type_income_text">
                        </RadioButton>

                    </RadioGroup>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="390dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:id="@+id/transaction_category_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_text"
                        android:textSize="18sp"
                        android:layout_gravity="center" />

                    <Spinner
                        android:id="@+id/edit_category_transaction"
                        android:layout_width="225dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="30dp"
                        android:spinnerMode="dropdown"
                        android:contentDescription="@string/category_hint"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="390dp"
                android:layout_height="80dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:id="@+id/transaction_note_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_text"
                        android:textSize="18sp"
                        android:layout_gravity="center" />

                    <EditText
                        android:id="@+id/transaction_note_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:backgroundTint="@color/blue"
                        android:inputType="textMultiLine"
                        android:textCursorDrawable="@null"
                        android:hint="@string/note_hint">
                    </EditText>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/delete_transaction_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red"
                    android:text="@string/delete_transaction_text"
                    android:textAllCaps="false">
                </Button>

                <Button
                    android:id="@+id/update_transaction_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/blue"
                    android:text="@string/update_transaction_text"
                    android:textAllCaps="false">
                </Button>

            </LinearLayout>

        </LinearLayout>

</layout>