<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_light_grey">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            style="@style/square_card_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center">
            </TextView>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text="@string/categories_accounts_text"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/accounts_card"
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/accounts_text"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/expense_categories_card"
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/expense_categories_text"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/income_categories_card"
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/income_categories_text"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>