<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_light_grey">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            style="@style/square_card_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stats_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center">
            </TextView>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <Button
                android:id="@+id/stats_expenses_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_highlight"
                android:text="@string/expenses_button_text"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/stats_all_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/all_button_text"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/stats_incomes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/incomes_button_text"
                android:textColor="@color/black" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/stats_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bar_chart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:visibility="invisible"/>

        </RelativeLayout>

    </LinearLayout>

</layout>